--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "create-admin": "ts-node -r tsconfig-paths/register scripts/create-admin.ts"
+    "create-admin": "ts-node -r tsconfig-paths/register scripts/create-admin.ts",
+    "activate-admin": "ts-node -r tsconfig-paths/register scripts/activate-admin.ts",
+    "check-categories": "ts-node -r tsconfig-paths/register scripts/check-categories.ts",
+    "generate-products": "ts-node -r tsconfig-paths/register scripts/generate-products.ts"
   },
   "dependencies": {
     "@keyv/redis": "^4.6.0",
